--- a/ui/gui.ui
+++ b/ui/gui.ui
@@ -98,12 +98,22 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QCheckBox" name="hmdCheckbox">
+          <property name="text">
+           <string>HMD Capture</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item row="2" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <widget class="QSlider" name="timeSlider">
+          <property name="maximum">
+           <number>3000</number>
+          </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
