--- a/ui/gui.ui
+++ b/ui/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1291</width>
-    <height>952</height>
+    <width>1562</width>
+    <height>1048</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,12 +45,12 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>FbxFiles</string>
+           <string>Scenes</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QListWidget" name="fbxSceneList">
+         <widget class="QListWidget" name="sceneList">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -69,6 +69,9 @@
          <widget class="QCheckBox" name="skeletonCheckbox">
           <property name="text">
            <string>Skeleton</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -99,9 +102,16 @@
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="hmdCheckbox">
+         <widget class="QCheckBox" name="correctCheckbox">
           <property name="text">
-           <string>HMD Capture</string>
+           <string>Correct</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="predictedCheckbox">
+          <property name="text">
+           <string>Predicted</string>
           </property>
          </widget>
         </item>
@@ -110,12 +120,25 @@
       <item row="2" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
+         <widget class="QSpinBox" name="startFrameSpinBox"/>
+        </item>
+        <item>
          <widget class="QSlider" name="timeSlider">
           <property name="maximum">
            <number>3000</number>
           </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="endFrameSpinBox">
+          <property name="maximum">
+           <number>5000</number>
+          </property>
+          <property name="value">
+           <number>100</number>
           </property>
          </widget>
         </item>
@@ -143,7 +166,7 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>85</width>
+            <width>200</width>
             <height>0</height>
            </size>
           </property>
@@ -155,31 +178,6 @@
           </property>
           <property name="text">
            <string>Play</string>
-          </property>
-         </widget>
-        </item>
-        <item alignment="Qt::AlignRight">
-         <widget class="QPushButton" name="trainPushButton">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>85</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>85</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Train</string>
           </property>
          </widget>
         </item>
@@ -233,10 +231,48 @@
            <number>1</number>
           </property>
           <property name="value">
-           <number>0</number>
+           <number>10</number>
           </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="trainPushButton">
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>200</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Train</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="predictPushButton">
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>200</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Predict</string>
           </property>
          </widget>
         </item>
@@ -264,7 +300,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1291</width>
+     <width>1562</width>
      <height>25</height>
     </rect>
    </property>
