--- a/ui/gui.ui
+++ b/ui/gui.ui
@@ -22,7 +22,7 @@
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Configurations</string>
+           <string>Systems</string>
           </property>
          </widget>
         </item>
@@ -107,7 +107,7 @@
         <item>
          <widget class="QCheckBox" name="predictedCheckbox">
           <property name="text">
-           <string>Predicted</string>
+           <string>Calculated</string>
           </property>
          </widget>
         </item>
@@ -115,6 +115,13 @@
          <widget class="QCheckBox" name="recomposeCheckbox">
           <property name="text">
            <string>Recomposed</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="skeletonRecomposedCheckbox">
+          <property name="text">
+           <string>Skeleton Recomposed</string>
           </property>
          </widget>
         </item>
@@ -252,6 +259,16 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="transformsCheckbox">
+          <property name="text">
+           <string>Draw Transforms</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -279,7 +296,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Train</string>
+           <string>Calculate</string>
           </property>
          </widget>
         </item>
@@ -298,7 +315,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Terminate Training</string>
+           <string>Cancel</string>
           </property>
          </widget>
         </item>
